fix h1 title on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2001,6 +2001,11 @@ aside .nav {
         border-right: 1px solid var(--cua-white) !important;
     }
 
+    .node--type-landing-page div#block-cua-theme-page-title {
+        margin: 1rem 0 0 24px !important;
+        max-width: 90%;
+    }
+
 }
 
 /*** Responsive starts here ***/
